--- a/src/main/resources/templates/view0.html
+++ b/src/main/resources/templates/view0.html
@@ -52,7 +52,7 @@
 		<div th:if="${captcha.counter > 0}">
 			<label>Answer:</label>
 			<!-- <input type="text" id="answer" name="answer" data-th-field="*{captcha.answer}"> -->
-			<input type="text" id="answer" name="answer">
+			<input type="text" id="answer" name="captcha.userAnswer" data-th-field="*{captcha.userAnswer}">
 		</div>
 		<br/>
 		<tr>
