--- a/src/main/resources/templates/protected/view1.html
+++ b/src/main/resources/templates/protected/view1.html
@@ -13,7 +13,7 @@
 			<img src="/polar_bear.png" height="300">
 		</div>
 
-		<form method="GET" data-th-action="@{/}">
+		<form method="GET" data-th-action="@{/logout}">
 			<button type="submit">Logout</button>
 		</form>
 
