--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Your login succeeded. </h1>
+    <h1>You need to authenticate first. </h1>
 </body>
 </html>
