--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -27,7 +27,7 @@ table, th, td {
 
   body {
     /* background-image: url('/images/weatherbackground.jpg'); */
-    background-color:burlywood;
+    background-color: gainsboro;
   }
 
   .bold {
